feat: Build an executable JAR

--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,13 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.zendesk.ticketviewer.MainApplication</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
